--- a/package.json
+++ b/package.json
@@ -25,10 +25,23 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.5.0",
+    "husky": "^4.3.8",
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
+    "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
     "vite": "^2.0.0-beta.64"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier"
+    ]
   }
 }
