--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
+    "@types/mockjs": "^1.0.3",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
@@ -29,9 +30,11 @@
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
     "lint-staged": "^10.5.3",
+    "mockjs": "^1.1.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.64"
+    "vite": "^2.0.0-beta.64",
+    "vite-plugin-mock": "^2.0.1"
   },
   "husky": {
     "hooks": {
