--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vuedx-typecheck . && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
     "ant-design-vue": "^2.0.0-rc.9",
@@ -34,7 +37,8 @@
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
     "vite": "^2.0.0-beta.64",
-    "vite-plugin-mock": "^2.0.1"
+    "vite-plugin-mock": "^2.0.1",
+    "vitepress": "^0.11.5"
   },
   "husky": {
     "hooks": {
