--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "mockjs": "^1.1.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.64",
+    "vite": "^2.0.1",
     "vite-plugin-mock": "^2.0.1",
     "vitepress": "^0.11.5"
   },
