--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "docs:serve": "vitepress serve docs"
   },
   "dependencies": {
-    "ant-design-vue": "^2.0.0-rc.9",
-    "element-plus": "^1.0.2-beta.31",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.3"
+    "ant-design-vue": "^2.0.1",
+    "element-plus": "^1.0.2-beta.32",
+    "vue": "^3.0.6",
+    "vue-router": "^4.0.4"
   },
   "devDependencies": {
     "@types/mockjs": "^1.0.3",
     "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "@vitejs/plugin-vue": "^1.1.4",
-    "@vitejs/plugin-vue-jsx": "^1.0.2",
-    "@vue/compiler-sfc": "^3.0.5",
-    "@vuedx/typecheck": "^0.6.0",
-    "@vuedx/typescript-plugin-vue": "^0.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "@vitejs/plugin-vue": "^1.1.5",
+    "@vitejs/plugin-vue-jsx": "^1.1.2",
+    "@vue/compiler-sfc": "^3.0.6",
+    "@vuedx/typecheck": "^0.6.3",
+    "@vuedx/typescript-plugin-vue": "^0.6.3",
     "eslint": "^7.19.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
@@ -36,9 +36,9 @@
     "mockjs": "^1.1.0",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3",
-    "vite": "^2.0.1",
-    "vite-plugin-mock": "^2.0.1",
-    "vitepress": "^0.11.5"
+    "vite": "^2.0.4",
+    "vite-plugin-mock": "^2.1.5",
+    "vitepress": "^0.12.2"
   },
   "husky": {
     "hooks": {
